# Convergent-SST

./: README.md
Data/: biasrrt_b50.mat  brrt_b125.mat  brrt_b150.mat  evaluate_res.m  s_method1_deltas09_b00.mat  s_method1_deltas09_b10.mat  s_method1_deltas09_b100.mat  s_method1_deltas09_b125.mat  s_method1_deltas09_b150.mat  s_method1_deltas09_b25.mat  s_method1_deltas09_b50.mat  s_method1_deltas09_b75.mat  s_method2_deltas09_b100.mat  s_method2_deltas09_b125.mat  s_method2_deltas09_b150.mat  s_method2_deltas09_b25.mat  s_method2_deltas09_b50.mat  s_method2_deltas09_b75.mat
c_sst_in_cpp/: .gitignore  .hg_archival.txt  .hgignore  .hgtags  CMakeLists.txt  rrt.sh  rrt_gripper_2D.sh  rrt_restart_gripper_2D.sh  sst_gripper_2D.sh
c_sst_in_cpp/OpenraveEnv/: Gripper.STL  Gripper_simplified.STL  Gripper_simplified2.STL  bar_and_gripper.STL  gripper_sys.env.xml  gripper_sys_4claw.env8.xml  gripper_sys_4claw_bar.env.xml  gripper_sys_4claw_simplified.env.xml  gripper_sys_puma.env.xml  obstacle1.STL  obstacle2.STL  obstacle3.STL
c_sst_in_cpp/cgal/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test.cpp
c_sst_in_cpp/convex_hull/: compile.txt  convexhull.cpp  test.cpp
c_sst_in_cpp/data/: gripper_record.txt  rrt_0.txt  sst_0.txt
c_sst_in_cpp/data/gripper/: sst_0.txt
c_sst_in_cpp/data/hill/: sst_0.txt
c_sst_in_cpp/data/hill_system1/: rrt_0.txt  rrt_1.txt  rrt_10.txt  rrt_11.txt  rrt_12.txt  rrt_13.txt  rrt_14.txt  rrt_15.txt  rrt_16.txt  rrt_17.txt  rrt_18.txt  rrt_19.txt  rrt_2.txt  rrt_20.txt  rrt_21.txt  rrt_22.txt  rrt_23.txt  rrt_24.txt  rrt_25.txt  rrt_26.txt  rrt_27.txt  rrt_28.txt  rrt_29.txt  rrt_3.txt  rrt_30.txt  rrt_31.txt  rrt_32.txt  rrt_33.txt  rrt_34.txt  rrt_35.txt  rrt_36.txt  rrt_37.txt  rrt_38.txt  rrt_39.txt  rrt_4.txt  rrt_40.txt  rrt_41.txt  rrt_42.txt  rrt_43.txt  rrt_44.txt  (+82 more)
c_sst_in_cpp/data/hill_system2/: rrt_0.txt  sst_0.txt  sst_1.txt
c_sst_in_cpp/doc/html/: annotated.html  annotated_dup.js  car_8hpp.html  car_8hpp_source.html  cart__pole_8hpp.html  cart__pole_8hpp_source.html  class_rectangle__t-members.html  class_rectangle__t.html  class_rectangle__t.js  classcar__t-members.html  classcar__t.html  classcar__t.js  classcart__pole__t-members.html  classcart__pole__t.html  classcart__pole__t.js  classcondition__check__t-members.html  classcondition__check__t.html  classcondition__check__t.js  classes.html  classgraph__nearest__neighbors__t-members.html  classgraph__nearest__neighbors__t.html  classgraph__nearest__neighbors__t.js  classpendulum__t-members.html  classpendulum__t.html  classpendulum__t.js  classplanner__t-members.html  classplanner__t.html  classplanner__t.js  classpoint__t-members.html  classpoint__t.html  classpoint__t.js  classproximity__node__t-members.html  classproximity__node__t.html  classproximity__node__t.js  classrally__car__t-members.html  classrally__car__t.html  classrally__car__t.js  classrrt__t-members.html  classrrt__t.html  classrrt__t.js  (+75 more)
c_sst_in_cpp/doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  (+15 more)
c_sst_in_cpp/include/motion_planners/: planner.hpp  rrt.hpp  rrt_restart.hpp  sst.hpp  tree_node.hpp
c_sst_in_cpp/include/nearest_neighbors/: graph_nearest_neighbors.hpp
c_sst_in_cpp/include/systems/: climb_hill.hpp  gripper.hpp  gripper_2D.hpp  gripper_2D_EG.hpp  gripper_2D_OP.hpp  hill.hpp  system.hpp
c_sst_in_cpp/include/utilities/: convexhull.hpp  parameter_reader.hpp
c_sst_in_cpp/input/: default.cfg  gripper.cfg  hill.cfg  restart_rrt_complex_hill.cfg  sst_complex_hill.cfg  sst_gripper.cfg  sst_gripper_2D.cfg  sst_gripper_2D_EG.cfg  sst_gripper_2D_OP.cfg
c_sst_in_cpp/input/complex_hill/: case1.cfg
c_sst_in_cpp/input/hill/: hill.cfg
c_sst_in_cpp/input/hill_results/: case1.cfg
c_sst_in_cpp/results/: climb_hill_rrt_0.txt  climb_hill_sst_0.txt  gripper_2D_EG_sst_0.txt  gripper_2D_OP_rrt_restart_0.txt  gripper_2D_OP_sst_1.txt  gripper_2D_rrt_0.txt  gripper_2D_sst_0.txt  gripper_2D_sst_1.txt  gripper_2D_sst_2.txt  gripper_2D_sst_3.txt  gripper_rrt_restart_0.txt  gripper_sst_0.txt
c_sst_in_cpp/src/motion_planners/: planner.cpp  rrt.cpp  rrt_restart.cpp  sst.cpp
c_sst_in_cpp/src/nearest_neighbors/: graph_nearest_neighbors.cpp
c_sst_in_cpp/src/systems/: climb_hill.cpp  gripper.cpp  gripper_2D.cpp  gripper_2D_EG.cpp  gripper_2D_OP.cpp  hill.cpp
c_sst_in_cpp/src/utilities/: convexhull.cpp  parameter_reader.cpp  random.cpp
c_sst_in_cpp/tests/: run.cpp
c_sst_in_cpp/visiualization/: path_comp.py  solution_path_0.csv  solution_path_200.csv  solution_path_20000.csv  solution_path_2threads.csv  solution_path_300000.csv  solution_path_303.csv  solution_path_600000.csv  solution_path_gripper_2D_OP_1.csv  solution_path_gripper_2D_OP_2.csv  solution_path_gripper_2D_OP_3.csv  solution_path_gripper_2D_OP_4.csv  solution_path_gripper_2D_OP_5.csv  solution_path_large.csv  visiualize_gripper_solution.py
src/: B_RRT.m  Convergent_SST.m
src/code/: BestNear.m  BestNear_Naive.m  CheckEquality.m  ClimbHill.m  ClimbHill_ode1.m  ClimbHill_ode45.m  CollisionFree.m  Conver_MonteCarlo_Prop.m  Divergence_Matrix.m  Divergence_Matrix.m~  MonteCarlo_Prop.m  Mountain_Height.m  Nearest.m  ParticleMap.m  PruneLeaf.m  SST.m  Sample.m  Sample_Hill.m  SearchIndex.m  SetRep.m  average_divergence.m  biased_move.m  closest_neighbour.m  convergent.m  dist.m  draw_env.m  estimate_volume.m  fake_dist.m  initialize.m  isIn.m  isLeaf.m  ode1.m  ori_biased_move.m  point_equal.m  point_system.slx  run_sim.m  sim_BRRT.m  sim_Convergent_SST.m
